# CH-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  conventions.md  out.txt  win-clang-make.bat
clang_test/: CMakeLists.txt  clang_install.cpp  cmake_compile.bat  glfw-win-make.bat  vs2017_compile_select.bat
include/utils/debug/: log.h  log.hpp
include/utils/files/: binary_loader.hpp  file_path.hpp  files_config.h  files_config.h.in
shaders/: triangle.frag.glsl  triangle.vert.glsl  triangle_pre_3d.vert.glsl  triangle_pre_uv.vert.glsl
src/: main.cpp
src/utils/files/: binary_loader.cpp  file_path.cpp
